# Spine-Hygiene

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BRAND.md  DEVELOPMENT.md  PERFORMANCE.md  POSTURE_MODEL.md  PRIVACY.md  PRODUCT_SPEC.md  SIT_STAND.md
scripts/: fetch-models.mjs  gen-icons.mjs  install.sh  release.sh  update-app.sh
site/: index.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_lifecycle.rs  commands.rs  lib.rs  main.rs  tray.rs
src/app/: AppProvider.tsx  HistoryProvider.tsx  appState.ts  placeActions.ts  router.tsx
src/audio/: voice.ts
src/camera/: cameraManager.ts  cameraPermissions.ts  cameraTypes.ts  frameSampler.ts
src/components/: CameraPreview.tsx  Logo.tsx  (+4 more)
tests/: adaptiveInference.test.ts  app.test.tsx  appState.test.ts  backgroundMotion.test.ts  dashboard.test.tsx  dashboardMetrics.test.ts  durationTracker.test.ts  fakeDatabase.ts  featureExtractor.test.ts  fixtures.ts  goodPoseGuide.test.ts  historyStore.test.ts  monitoringConfig.test.ts  monitoringController.test.ts  notifications.test.ts  performanceInstrumentation.test.ts  pipeline.test.ts  positionTracking.test.ts  postureScorer.test.ts  postureStateMachine.test.ts  repositories.test.ts  sceneSignature.test.ts  sessionAggregator.test.ts  settingsRepository.test.ts  smoothing.test.ts  transitionDetector.test.ts  trayState.test.ts  voice.test.ts
(+53 files in other folders)
