[package]
name = "spine-iq"
version = "0.2.2"
description = "Spine-IQ — local, private posture & sitting/standing wellness utility"
authors = ["Spine-IQ"]
edition = "2021"
rust-version = "1.77.2"

[lib]
# The Tauri 2 entry point lives in the library so mobile targets can reuse it.
name = "spine_iq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enabled by default when building via `tauri dev`/`tauri build`.
custom-protocol = ["tauri/custom-protocol"]
